--- a/templates/index.html
+++ b/templates/index.html
@@ -7,158 +7,165 @@
 
 {% block content %}
     <!-- Masthead-->
-<header class="masthead">
-    <div class="container position-relative">
-        <div class="row justify-content-center">
-            <div class="col-xl-6">
-                <div class="text-center text-white">
-                    <!-- Page heading-->
-                    <h1 class="mb-5">Введите номер телефона чтобы узнать его рейтинг и посмотреть отзывы:</h1>
+    <header class="masthead">
+        <div class="container position-relative">
+            <div class="row justify-content-center">
+                <div class="col-xl-6">
+                    <div class="text-center text-white">
+                        <!-- Page heading-->
+                        <h1 class="mb-5">Введите номер телефона чтобы узнать его рейтинг и посмотреть отзывы:</h1>
+                        <form method="POST" action="/" novalidate>
+                            {{ phoneForm.csrf_token }}
+                            <div class="row">
+                                <div class="col">
+                                    {{ phoneForm.phone_number(class_="form-control phone") }}
+                                    {% if phoneForm.phone_number.errors %}
+                                        <ul class="errors">
+                                            {% for error in phoneForm.phone_number.errors %}
+                                                <li style="list-style-type: none;"><small
+                                                        class="form-text text-warning">{{ error }}</small></li>
+                                            {% endfor %}
+                                        </ul>
+                                    {% endif %}
+                                </div>
+                                <div class="col-3">
+                                    {{ phoneForm.submit(class_="btn btn-primary btn-block") }}
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Icons Grid-->
+    <section class="features-icons bg-light text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                        <div class="features-icons-icon d-flex"><i class="bi-chat-left-text m-auto text-primary"></i>
+                        </div>
+                        <h3>Телеграм-Бот</h3>
+                        <p class="lead mb-0">Отправьте ему номер телефона, который хотите проверить.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                        <div class="features-icons-icon d-flex"><i class="bi-cloud-check m-auto text-primary"></i></div>
+                        <h3>Бесплатный API</h3>
+                        <p class="lead mb-0">Подключите свое приложение к нашему сервису.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                        <div class="features-icons-icon d-flex"><i class="bi-info-circle m-auto text-primary"></i></div>
+                        <h3>Документация</h3>
+                        <p class="lead mb-0">Примеры запросов и ответов с подробным описанием полей.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Image Showcases-->
+    {#<section class="showcase">#}
+    {#    <div class="container-fluid p-0">#}
+    {#        <div class="row g-0">#}
+    {#            <div class="col-lg-6 order-lg-2 text-white showcase-img"#}
+    {#                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-1.jpg') }}')"></div>#}
+    {#            <div class="col-lg-6 order-lg-1 my-auto showcase-text">#}
+    {#                <h2>Fully Responsive Design</h2>#}
+    {#                <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look#}
+    {#                    great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#        <div class="row g-0">#}
+    {#            <div class="col-lg-6 text-white showcase-img"#}
+    {#                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-2.jpg') }}')"></div>#}
+    {#            <div class="col-lg-6 my-auto showcase-text">#}
+    {#                <h2>Updated For Bootstrap 5</h2>#}
+    {#                <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 5 is leading the way#}
+    {#                    in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap#}
+    {#                    5!</p>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#        <div class="row g-0">#}
+    {#            <div class="col-lg-6 order-lg-2 text-white showcase-img"#}
+    {#                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-3.jpg') }}')"></div>#}
+    {#            <div class="col-lg-6 order-lg-1 my-auto showcase-text">#}
+    {#                <h2>Easy to Use & Customize</h2>#}
+    {#                <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some#}
+    {#                    deeper customization options. Out of the box, just add your content and images, and your new landing#}
+    {#                    page will be ready to go!</p>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#    </div>#}
+    {#</section>#}
+    <!-- Testimonials-->
+    {#<section class="testimonials text-center bg-light">#}
+    {#    <div class="container">#}
+    {#        <h2 class="mb-5">What people are saying...</h2>#}
+    {#        <div class="row">#}
+    {#            <div class="col-lg-4">#}
+    {#                <div class="testimonial-item mx-auto mb-5 mb-lg-0">#}
+    {#                    <img class="img-fluid rounded-circle mb-3"#}
+    {#                         src="{{ url_for('static', filename='assets/img/testimonials-1.jpg') }}" alt="..."/>#}
+    {#                    <h5>Margaret E.</h5>#}
+    {#                    <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>#}
+    {#                </div>#}
+    {#            </div>#}
+    {#            <div class="col-lg-4">#}
+    {#                <div class="testimonial-item mx-auto mb-5 mb-lg-0">#}
+    {#                    <img class="img-fluid rounded-circle mb-3"#}
+    {#                         src="{{ url_for('static', filename='assets/img/testimonials-2.jpg') }}" alt="..."/>#}
+    {#                    <h5>Fred S.</h5>#}
+    {#                    <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super#}
+    {#                        nice landing pages."</p>#}
+    {#                </div>#}
+    {#            </div>#}
+    {#            <div class="col-lg-4">#}
+    {#                <div class="testimonial-item mx-auto mb-5 mb-lg-0">#}
+    {#                    <img class="img-fluid rounded-circle mb-3"#}
+    {#                         src="{{ url_for('static', filename='assets/img/testimonials-3.jpg') }}" alt="..."/>#}
+    {#                    <h5>Sarah W.</h5>#}
+    {#                    <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to#}
+    {#                        us!"</p>#}
+    {#                </div>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#    </div>#}
+    {#</section>#}
+    <!-- Call to Action-->
+    <section class="call-to-action text-white text-center" id="signup">
+        <div class="container position-relative">
+            <div class="row justify-content-center">
+                <div class="col-xl-6">
+                    <h2 class="mb-4">Оставьте свой email, чтобы быстрее узнавать о новых возможностях API:</h2>
                     <form method="POST" action="/" novalidate>
-                        {{ phoneForm.csrf_token }}
+                        {{ emailForm.csrf_token }}
                         <div class="row">
                             <div class="col">
-                                {{ phoneForm.phone_number(class_="form-control") }}
-                                {% if phoneForm.phone_number.errors %}
+                                {{ emailForm.email(class_="form-control") }}
+                                {% if emailForm.email.errors %}
                                     <ul class="errors">
-                                        {% for error in phoneForm.phone_number.errors %}
-                                            <li style="list-style-type: none;"><small class="form-text text-warning">{{ error }}</small></li>
+                                        {% for error in emailForm.email.errors %}
+                                            <li><small class="form-text text-warning">{{ error }}</small></li>
                                         {% endfor %}
                                     </ul>
                                 {% endif %}
                             </div>
                             <div class="col-3">
-                                {{ phoneForm.submit(class_="btn btn-primary btn-block") }}
+                                {{ emailForm.submit(class_="btn btn-primary btn-block") }}
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-    </div>
-</header>
-<!-- Icons Grid-->
-<section class="features-icons bg-light text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                    <div class="features-icons-icon d-flex"><i class="bi-chat-left-text m-auto text-primary"></i></div>
-                    <h3>Телеграм-Бот</h3>
-                    <p class="lead mb-0">Отправьте ему номер телефона, который хотите проверить.</p>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                    <div class="features-icons-icon d-flex"><i class="bi-cloud-check m-auto text-primary"></i></div>
-                    <h3>Бесплатный API</h3>
-                    <p class="lead mb-0">Подключите свое приложение к нашему сервису.</p>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                    <div class="features-icons-icon d-flex"><i class="bi-info-circle m-auto text-primary"></i></div>
-                    <h3>Документация</h3>
-                    <p class="lead mb-0">Примеры запросов и ответов с подробным описанием полей.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Image Showcases-->
-{#<section class="showcase">#}
-{#    <div class="container-fluid p-0">#}
-{#        <div class="row g-0">#}
-{#            <div class="col-lg-6 order-lg-2 text-white showcase-img"#}
-{#                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-1.jpg') }}')"></div>#}
-{#            <div class="col-lg-6 order-lg-1 my-auto showcase-text">#}
-{#                <h2>Fully Responsive Design</h2>#}
-{#                <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look#}
-{#                    great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>#}
-{#            </div>#}
-{#        </div>#}
-{#        <div class="row g-0">#}
-{#            <div class="col-lg-6 text-white showcase-img"#}
-{#                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-2.jpg') }}')"></div>#}
-{#            <div class="col-lg-6 my-auto showcase-text">#}
-{#                <h2>Updated For Bootstrap 5</h2>#}
-{#                <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 5 is leading the way#}
-{#                    in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap#}
-{#                    5!</p>#}
-{#            </div>#}
-{#        </div>#}
-{#        <div class="row g-0">#}
-{#            <div class="col-lg-6 order-lg-2 text-white showcase-img"#}
-{#                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-3.jpg') }}')"></div>#}
-{#            <div class="col-lg-6 order-lg-1 my-auto showcase-text">#}
-{#                <h2>Easy to Use & Customize</h2>#}
-{#                <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some#}
-{#                    deeper customization options. Out of the box, just add your content and images, and your new landing#}
-{#                    page will be ready to go!</p>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#</section>#}
-<!-- Testimonials-->
-{#<section class="testimonials text-center bg-light">#}
-{#    <div class="container">#}
-{#        <h2 class="mb-5">What people are saying...</h2>#}
-{#        <div class="row">#}
-{#            <div class="col-lg-4">#}
-{#                <div class="testimonial-item mx-auto mb-5 mb-lg-0">#}
-{#                    <img class="img-fluid rounded-circle mb-3"#}
-{#                         src="{{ url_for('static', filename='assets/img/testimonials-1.jpg') }}" alt="..."/>#}
-{#                    <h5>Margaret E.</h5>#}
-{#                    <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="col-lg-4">#}
-{#                <div class="testimonial-item mx-auto mb-5 mb-lg-0">#}
-{#                    <img class="img-fluid rounded-circle mb-3"#}
-{#                         src="{{ url_for('static', filename='assets/img/testimonials-2.jpg') }}" alt="..."/>#}
-{#                    <h5>Fred S.</h5>#}
-{#                    <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super#}
-{#                        nice landing pages."</p>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="col-lg-4">#}
-{#                <div class="testimonial-item mx-auto mb-5 mb-lg-0">#}
-{#                    <img class="img-fluid rounded-circle mb-3"#}
-{#                         src="{{ url_for('static', filename='assets/img/testimonials-3.jpg') }}" alt="..."/>#}
-{#                    <h5>Sarah W.</h5>#}
-{#                    <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to#}
-{#                        us!"</p>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#</section>#}
-<!-- Call to Action-->
-<section class="call-to-action text-white text-center" id="signup">
-    <div class="container position-relative">
-        <div class="row justify-content-center">
-            <div class="col-xl-6">
-                <h2 class="mb-4">Оставьте свой email, чтобы быстрее узнавать о новых возможностях API:</h2>
-                <form method="POST" action="/" novalidate>
-                    {{ emailForm.csrf_token }}
-                    <div class="row">
-                        <div class="col">
-                            {{ emailForm.email(class_="form-control") }}
-                            {% if emailForm.email.errors %}
-                                <ul class="errors">
-                                    {% for error in emailForm.email.errors %}
-                                        <li><small class="form-text text-warning">{{ error }}</small></li>
-                                    {% endfor %}
-                                </ul>
-                            {% endif %}
-                        </div>
-                        <div class="col-3">
-                            {{ emailForm.submit(class_="btn btn-primary btn-block") }}
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
+{% endblock %}
+
+{% block scripts %}
+    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.maskedinput.js') }}"></script>
 {% endblock %}
