moved review markup out to review.html and included them with jinja instead

--- a/templates/number.html
+++ b/templates/number.html
@@ -54,36 +54,10 @@
             {% if phoneNumber.actual_reviews|length > 0 %}
                 <div class="col-lg-6 p-4">
                     <p class="h5">Отзывы:</p>
-                    {% for rev in phoneNumber.actual_reviews %}
-                        <div class="card mb-3">
-                            <div class="card-header">
-                                <h5 class="card-title mt-1">
-                                    {{ rev.title }}
-                                    {% if rev.rating == 0.0 %}
-                                        <span class="badge rounded-pill bg-secondary">{{ "%.1f"|format(rev.rating|float) }}</span>
-                                    {% elif rev.rating >= 4.0 %}
-                                        <span class="badge rounded-pill bg-success">{{ "%.1f"|format(rev.rating|float) }}</span>
-                                    {% elif rev.rating >= 3.0 %}
-                                        <span class="badge rounded-pill bg-warning">{{ "%.1f"|format(rev.rating|float) }}</span>
-                                    {% else %}
-                                        <span class="badge rounded-pill bg-danger">{{ "%.1f"|format(rev.rating|float) }}</span>
-                                    {% endif %}
-                                </h5>
-                            </div>
-                            <div class="card-body">
-                                {% if rev.body %}
-                                    <p class="card-text">{{ rev.body }}</p>
-                                {% endif %}
-                                <p class="card-bottom-line">
-                                    <span class="card-subtitle mb-2 text-muted h6">{{ rev.author }}, {{ rev.publish_date.strftime('%d.%m.%Y') }}</span>
-                                </p>
-                                {% if rev.tags|length %}
-                                    {% for tag in rev.tags %}
-                                        <span class="badge rounded-pill bg-primary">{{ tag }}</span>
-                                    {% endfor %}
-                                {% endif %}
-                            </div>
-                        </div>
+                    {% for review in phoneNumber.actual_reviews %}
+                        {% with rev = review %}
+                            {% include "review.html" %}
+                        {% endwith %}
                     {% endfor %}
                 </div>
             {% endif %}
@@ -92,36 +66,10 @@
             {% if phoneNumber.old_reviews|length > 0 %}
                 <div class="col-lg-6 p-4">
                     <p class="h5">Неактуальные отзывы:</p>
-                    {% for rev in phoneNumber.old_reviews %}
-                        <div class="card mb-3">
-                            <div class="card-header">
-                                <h5 class="card-title mt-1">
-                                    {{ rev.title }}
-                                    {% if rev.rating == 0.0 %}
-                                        <span class="badge rounded-pill bg-secondary">{{ "%.1f"|format(rev.rating|float) }}</span>
-                                    {% elif rev.rating >= 4.0 %}
-                                        <span class="badge rounded-pill bg-success">{{ "%.1f"|format(rev.rating|float) }}</span>
-                                    {% elif rev.rating >= 3.0 %}
-                                        <span class="badge rounded-pill bg-warning">{{ "%.1f"|format(rev.rating|float) }}</span>
-                                    {% else %}
-                                        <span class="badge rounded-pill bg-danger">{{ "%.1f"|format(rev.rating|float) }}</span>
-                                    {% endif %}
-                                </h5>
-                            </div>
-                            <div class="card-body">
-                                {% if rev.body %}
-                                    <p class="card-text">{{ rev.body }}</p>
-                                {% endif %}
-                                <p class="card-bottom-line">
-                                    <span class="card-subtitle mb-2 text-muted h6">{{ rev.author }}, {{ rev.publish_date.strftime('%d.%m.%Y') }}</span>
-                                </p>
-                                {% if rev.tags|length %}
-                                    {% for tag in rev.tags %}
-                                        <span class="badge rounded-pill bg-primary">{{ tag }}</span>
-                                    {% endfor %}
-                                {% endif %}
-                            </div>
-                        </div>
+                    {% for review in phoneNumber.old_reviews %}
+                        {% with rev = review %}
+                            {% include "review.html" %}
+                        {% endwith %}
                     {% endfor %}
                 </div>
             {% endif %}
