added not-found page template

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -78,8 +78,9 @@
             </div>
             <div class="row text-center mt-2">
                 <p class="text-muted small mb-0 mt-5">&copy; Phony 2021. Все права защищены.</p>
-                <p class="text-muted small mb-4">Автор фото:
-                    <a href="https://unsplash.com/@markuswinkler?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Markus Winkler</a> на
+                <p class="text-muted small mb-4">Авторы фото:
+                    <a href="https://unsplash.com/@markuswinkler?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Markus Winkler</a>,
+                    <a href="https://unsplash.com/@2mduffel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Mark Duffel</a> на
                     <a href="https://unsplash.com/s/photos/search?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
                 </p>
             </div>
