--- a/templates/index.html
+++ b/templates/index.html
@@ -8,16 +8,16 @@
 {% block content %}
     <!-- Masthead-->
     <header class="masthead">
-        <div class="container position-relative">
+        <div class="container-fluid position-relative">
             <div class="row justify-content-center">
-                <div class="col-xl-6">
+                <div class="col-md-6 col-sm-8 col-10">
                     <div class="text-center text-white">
                         <!-- Page heading-->
                         <h1 class="mb-5">Введите номер телефона чтобы узнать его рейтинг и посмотреть отзывы:</h1>
                         <form method="POST" action="/" novalidate>
                             {{ phoneForm.csrf_token }}
                             <div class="row">
-                                <div class="col">
+                                <div class="col-md-9 col-sm-8 col-9 mb-2 mt-2 m-auto">
                                     {{ phoneForm.phone_number(class_="form-control phone") }}
                                     {% if phoneForm.phone_number.errors %}
                                         <ul class="errors">
@@ -28,7 +28,7 @@
                                         </ul>
                                     {% endif %}
                                 </div>
-                                <div class="col-3">
+                                <div class="col-md-3 col-sm-4 col-12 mb-2 mt-2">
                                     {{ phoneForm.submit(class_="btn btn-primary btn-block") }}
                                 </div>
                             </div>
