separated web-app and api using flask-blueprints

--- a/entrypoints/flask_app/web/templates/index.html
+++ b/entrypoints/flask_app/web/templates/index.html
@@ -166,6 +166,6 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/jquery.maskedinput.js') }}"></script>
+    <script src="{{ url_for('phone-web-app.static', filename='js/jquery.js') }}"></script>
+    <script src="{{ url_for('phone-web-app.static', filename='js/jquery.maskedinput.js') }}"></script>
 {% endblock %}
