--- a/entrypoints/flask_app/web/templates/base_template.html
+++ b/entrypoints/flask_app/web/templates/base_template.html
@@ -7,7 +7,7 @@
     <meta name="author" content=""/>
     <title>{% block title %}{% endblock %}</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="{{ url_for("static", filename="assets/favicon.ico") }}"/>
+    <link rel="icon" type="image/x-icon" href="{{ url_for("phone-web-app.static", filename="assets/favicon.ico") }}"/>
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"
           type="text/css"/>
@@ -17,7 +17,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Core theme CSS and custom styles-->
-    <link href="{{ url_for("static", filename="css/styles.css") }}" rel="stylesheet"/>
+    <link href="{{ url_for("phone-web-app.static", filename="css/styles.css") }}" rel="stylesheet"/>
 </head>
 <body>
 
@@ -95,6 +95,6 @@
 {% block scripts %}{% endblock %}
 
 <!-- Core theme JS-->
-<script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+<script src="{{ url_for('phone-web-app.static', filename='js/scripts.js') }}"></script>
 </body>
 </html>
